--- a/pages/maqueiro.html
+++ b/pages/maqueiro.html
@@ -146,6 +146,8 @@
                       <ul class="nav nav-tabs">
                         <li class="active"><a href="#Cadastrar" data-toggle="tab">Cadastrar</a>
                         </li>
+                        <li><a href="#Consultar" data-toggle="tab">Consultar</a>
+                        </li>
                       </ul>
 
                       <br>
@@ -156,14 +158,19 @@
                           <div class="row">                            
                             <form role="form">
 
-                              <div class="form-group col-sm-6">
+                              <div class="form-group col-sm-4">
                                 <label>Nome</label>
                                 <input name="nome" type="text" class="form-control" placeholder="Digite seu nome" pattern="[a-zA-Z\s]+$" required autofocus >
                               </div>
 
-                              <div class="form-group col-sm-6">
+                              <div class="form-group col-sm-4">
+                                <label>CPF</label>
+                                <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}">
+                              </div>
+
+                              <div class="form-group col-sm-4">
                                 <label>E-mail</label>
-                                <input name="email" type="email" class="form-control" placeholder="Digite seu e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                                <input name="email" type="email" class="form-control" placeholder="E-mail para envio de informação médica" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                               </div>
 
                               <div class="form-group col-sm-3">
@@ -267,34 +274,218 @@
                             </div>    
                           </div>
                         </div>
+                        <div class="tab-pane fade" id="Consultar">
+
+                          <div class="row">
+
+                            <form role="form">
+                              <div class="form-group col-sm-12">
+                                <label>Buscar por:</label>                                        
+                              </div>
+                            </form>
+
+                            <form role="form">                                    
+
+                              <div class="form-group col-sm-2">                                                                                 
+                                <select class="form-control">
+                                  <option>Nome</option>
+                                  <option>CPF</option>                                         
+                                </select>                                        
+                              </div>
+
+                              <div class="form-group col-sm-8">                                                                            
+                                <input name="" type="search" class="form-control" placeholder="Descreva o que deseja buscar">
+                              </div>
+
+                              <div class="form-group col-sm-2">                                       
+                                <button class="btn btn-primary btn-block" type="button"><i class="fa fa-search"></i> Buscar</button>
+                              </div>
+
+                            </form>
+                            <br>                                    
+                            <!--tabelas-->
+                            <div class="table-responsive col-xs-12 col-sm-12 col-md-12">
+                              <label>Selecione o usuário para editar:</label>
+                              <table class="table table-bordered table-striped">
+                                <thead>
+                                  <tr>
+                                    <th>
+                                      <small>Nome</small>
+                                    </th>
+                                    <th>
+                                      <small>CPF</small>
+                                    </th>
+                                    <th>
+                                      <small>E-mail</small>
+                                    </th>                                              
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <th class="text-muted"></th>
+                                    <td class="text-muted"></td>
+                                    <td class="text-muted"></td>
+                                  </tr>
+                                  <tr>
+                                    <th class="text-muted"></th>
+                                    <td class="text-muted"></td>
+                                    <td class="text-muted"></td>
+                                  </tr>
+                                  <tr>
+                                    <th class="text-muted"></th>
+                                    <td class="text-muted"></td>
+                                    <td class="text-muted"></td>
+                                  </tr>
+
+                                </tbody>
+                              </table>
+                            </div> 
+
+                            <form role="form">                                                                    
+                              <div class="form-group col-sm-4">
+                                <label>Nome</label>
+                                <input name="nome" type="text" class="form-control" placeholder="Digite seu nome" pattern="[a-zA-Z\s]+$" required autofocus >
+                              </div>
+
+                              <div class="form-group col-sm-4">
+                                <label>CPF</label>
+                                <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}">
+                              </div>
+
+                              <div class="form-group col-sm-4">
+                                <label>E-mail</label>
+                                <input name="email" type="email" class="form-control" placeholder="E-mail para envio de informação médica" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                              </div>
+
+                              <div class="form-group col-sm-3">
+                                <label>Telefone</label>
+                                <input name="fixo" type="phone" class="form-control" placeholder="Digite seu telefone" id="telefone" maxlength="10" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
+                              </div>
+
+                              <div class="form-group col-sm-3">
+                                <label>Celular</label>
+                                <input name="celular" type="phone" class="form-control" placeholder="Digite seu número de celular" maxlength="11" id="celular" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
+                              </div>
+
+                              <div class="form-group col-sm-3">
+                                <label>Data de Nascimento</label>
+                                <input name="dataNasc" type="date" class="form-control" placeholder="Informe a data de nascimento" id="data" required>
+                              </div>
+
+                              <div class="form-group col-sm-3">
+                                <label>Sexo</label>
+                                <select name="sexo" class="form-control mr-sm-2" required>
+                                  <option>Selecione</option>
+                                  <option>Masculino</option>
+                                  <option>Feminino</option>
+                                </select>
+                              </div>
+
+                              <div class="form-group col-sm-4">
+                                <label>Cep</label>
+                                <input name="cep" type="number" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" required>
+                              </div>
+
+                              <div class="form-group col-sm-6">
+                                <label>Logradouro</label>
+                                <input name="logradouro" type="text" placeholder="Infome o endereço" class="form-control" required>
+                              </div>
+
+                              <div class="form-group col-sm-2">
+                                <label>Número</label>
+                                <input name="endNumero" type="number" placeholder="Número" class="form-control" required>
+                              </div>
+
+                              <div class="form-group col-sm-8">
+                                <label>Complemento</label>
+                                <input name="complemento" type="text" placeholder="Complemento" class="form-control" required>
+                              </div>
+
+                              <div class="form-group col-sm-4">
+                                <label>Bairro</label>
+                                <input name="bairro" type="text" placeholder="Infome o bairro" class="form-control" required>
+                              </div>
+
+                              <div class="form-group col-sm-6">
+                                <label>Cidade</label>
+                                <input name="cidade" type="text" placeholder="Informe a cidade" class="form-control" required>
+                              </div>
+
+                              <div class="form-group col-sm-6">
+                                <label>Estado</label>
+                                <select name="estado" class="form-control mr-sm-2" required>
+                                  <option>Selecione o estado</option>
+                                  <option value="AC">Acre</option>
+                                  <option value="AL">Alagoas</option>
+                                  <option value="AP">Amapá</option>
+                                  <option value="AM">Amazonas</option>
+                                  <option value="BA">Bahia</option>
+                                  <option value="CE">Ceará</option>
+                                  <option value="DF">Distrito Federal</option>
+                                  <option value="ES">Espirito Santo</option>
+                                  <option value="GO">Goiás</option>
+                                  <option value="MA">Maranhão</option>
+                                  <option value="MS">Mato Grosso do Sul</option>
+                                  <option value="MT">Mato Grosso</option>
+                                  <option value="MG">Minas Gerais</option>
+                                  <option value="PA">Pará</option>
+                                  <option value="PB">Paraíba</option>
+                                  <option value="PR">Paraná</option>
+                                  <option value="PE">Pernambuco</option>
+                                  <option value="PI">Piauí</option>
+                                  <option value="RJ">Rio de Janeiro</option>
+                                  <option value="RN">Rio Grande do Norte</option>
+                                  <option value="RS">Rio Grande do Sul</option>
+                                  <option value="RO">Rondônia</option>
+                                  <option value="RR">Roraima</option>
+                                  <option value="SC">Santa Catarina</option>
+                                  <option value="SP">São Paulo</option>
+                                  <option value="SE">Sergipe</option>
+                                  <option value="TO">Tocantins</option>
+                                </select>
+                              </div>
+
+                              <div class="col-md-6">
+                                <!--alinhamento dos Botões-->
+                              </div> 
+
+                              <div class="col-md-3 col-sm-3 col-xs-6">
+                                <button type="reset" class="btn btn-danger btn-block">EXCLUIR</button>
+                              </div>
+
+                              <div class="col-md-3 col-sm-3 col-xs-6">
+                                <button type="button" class="btn btn-success btn-block">SALVAR</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
+                <!-- /.col-lg-12 -->
               </div>
-              <!-- /.col-lg-12 -->
+              <!-- /.row -->
             </div>
-            <!-- /.row -->
+            <!-- /.container-fluid -->
           </div>
-          <!-- /.container-fluid -->
+          <!-- /#page-wrapper -->
         </div>
-        <!-- /#page-wrapper -->
       </div>
-    </div>
-    <!-- /#wrapper -->
+      <!-- /#wrapper -->
 
-    <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+      <!-- jQuery -->
+      <script src="../vendor/jquery/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+      <!-- Bootstrap Core JavaScript -->
+      <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+      <!-- Metis Menu Plugin JavaScript -->
+      <script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
-    <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+      <!-- Custom Theme JavaScript -->
+      <script src="../dist/js/sb-admin-2.js"></script>
 
-  </body>
+    </body>
 
-  </html>
+    </html>
