--- a/pages/prontuario.html
+++ b/pages/prontuario.html
@@ -36,27 +36,27 @@
 
     <div id="wrapper">
 
-       <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Prometheus</a>
-            </div>
-            <!-- /.navbar-header -->
-            <ul class="nav navbar-top-links navbar-right">
+     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">Prometheus</a>
+        </div>
+        <!-- /.navbar-header -->
+        <ul class="nav navbar-top-links navbar-right">
 
-                <!-- /.dropdown -->
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> Alterar Senha</a>
+            <!-- /.dropdown -->
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-user">
+                    <li>
+                        <a href="#"><i class="fa fa-user fa-fw"></i> Alterar Senha</a>
                         </li
                         <li>
                             <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
@@ -64,17 +64,17 @@
                     </ul>
                 </li>
             </ul>
-              <div class="navbar-default sidebar" role="navigation">
+            <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
                                 <input type="text" class="form-control" placeholder="Search...">
                                 <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
+                                    <button class="btn btn-default" type="button">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </span>
                             </div>
                             <!-- /input-group -->
                         </li>
@@ -130,32 +130,352 @@
         <!-- Page Content -->
         <div id="page-wrapper">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">Blank</h1>
+
+              <br>
+              <br>
+
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="panel panel-primary">
+
+                    <div class="panel-heading">
+                      <b>PRONTUÁRIOS</b>
+                  </div>
+                  <!-- /.panel-heading -->
+                  <div class="panel-body">
+
+                      <ul class="nav nav-tabs">
+                        <li class="active"><a href="#Cadastrar" data-toggle="tab">Cadastrar</a>
+                        </li>
+                        <li><a href="#Consultar" data-toggle="tab">Consultar</a>
+                        </li>
+                    </ul>
+
+                    <br>
+
+                    <div class="tab-content">
+                        <div class="tab-pane fade in active" id="Cadastrar">                                  
+                          <div class="row">
+                            <form role="form">                                                                    
+
+                                <div class="form-group col-sm-3">
+                                    <label>CPF</label>
+                                    <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required autofocus>
+                                </div>
+
+                                <div class="form-group col-sm-9">
+                                    <label>Nome do Paciente</label>
+                                    <input name="nome" type="text" class="form-control" placeholder="Nome" pattern="[a-zA-Z\s]+$" required>
+                                </div>
+
+                                <div class="form-group col-sm-11">
+                                    <!-- Alinhar campos -->
+                                </div>
+
+                                <div class="form-group col-sm-3">
+                                    <label>Sexo</label>
+                                    <select name="sexo" class="form-control mr-sm-2" required>
+                                      <option>Selecione</option>
+                                      <option>Masculino</option>
+                                      <option>Feminino</option>
+                                  </select>
+                              </div>
+
+                              <div class="form-group col-sm-3">
+                                <label>Data de Nascimento</label>
+                                <input name="dataNasc" type="date" class="form-control" required>
+                            </div>
+
+                            <div class="form-group col-sm-3">
+                                <label>Tipo de atendimento</label>
+                                <select name="atendimento" class="form-control mr-sm-2" required>
+                                  <option>Selecione</option>
+                                  <option>Ambulatorial</option>
+                                  <option>Urgência</option>
+                              </select>
+                          </div>
+
+
+                          <div class="form-group col-sm-3">
+                            <label>Leito</label>
+                            <input name="leito" type="text" class="form-control" placeholder="Leito" required>
+                        </div>
+
+                        <div class="form-group col-sm-3">
+                            <label>Data de entrada</label>
+                            <input name="dataEntrada" type="date" class="form-control" required>
+                        </div>
+
+                        <div class="form-group col-sm-11">
+                            <!-- Alinhar campos -->
+                        </div>
+
+                        <div class="form-group col-sm-3">
+                            <label>Alérgico a medicamentos?</label>
+                            <select name="alergico" class="form-control mr-sm-2" required>
+                              <option>Selecione</option>
+                              <option>Sim</option>
+                              <option>Não</option>
+                          </select>
+                      </div>
+
+                      <div class="form-group col-sm-12">
+                        <label>Qual medicamento?</label><br>
+                        <textarea name="descAlergia" type="text" class="form-control"></textarea><br>
                     </div>
-                    <!-- /.col-lg-12 -->
+
+                    <div class="form-group col-sm-3">
+                        <label>Faz uso de medicamentos controlados ou uso contínuo?</label>
+                        <select name="alergico" class="form-control mr-sm-2" required>
+                          <option>Selecione</option>
+                          <option>Sim</option>
+                          <option>Não</option>
+                      </select>
+                  </div>
+
+                  <div class="form-group col-sm-12">
+                    <label>Medicamento utilizado?</label><br>
+                    <textarea name="descMedicamento" type="text" class="form-control"></textarea><br>
                 </div>
-                <!-- /.row -->
+
+                <div class="form-group col-sm-12">
+                    <label>Diagnóstico</label><br>
+                    <textarea name="diagnostico" type="text" class="form-control"></textarea><br>
+                </div> 
+
+                <div class="form-group col-sm-12">
+                    <h3>Procedimentos</h3>
+                </div>
+
+                <div class="form-group col-sm-12">
+                    <label>Exames</label><br>
+                    <textarea name="exames" type="text" class="form-control"></textarea><br>
+                </div>
+
+                <div class="form-group col-sm-12">
+                    <label>Tratamento prescrito - Medicamentos e horários</label><br>
+                    <textarea name="tratamento" type="text" class="form-control"></textarea><br>
+                </div>
+
+            </div>                                   
+
+            <div class="col-md-7">
+              <!--alinhamento dos Botões-->
+          </div>                                    
+
+          <div class="col-md-2 col-sm-12 col-xs-6">
+              <button type="reset" class="btn btn-warning btn-block">LIMPAR</button>
+          </div>
+
+          <div class="col-md-3 col-sm-12 col-xs-6">
+              <button type="button" class="btn btn-primary btn-block">SALVAR</button>
+          </div>                                   
+      </div>
+
+      <div class="tab-pane fade" id="Consultar">
+
+          <div class="row">
+
+            <form role="form">
+              <div class="form-group col-sm-12">
+                <label>Buscar por:</label>                                        
             </div>
-            <!-- /.container-fluid -->
-        </div>
-        <!-- /#page-wrapper -->
+        </form>
 
+        <form role="form">                                    
+
+          <div class="form-group col-sm-2">                                                                                 
+            <select class="form-control">
+              <option>Nome</option>
+              <option>CPF</option>                                            
+          </select>                                        
+      </div>
+
+      <div class="form-group col-sm-8">                                                                            
+        <input name="" type="search" class="form-control" placeholder="Descreva o que deseja buscar">
     </div>
-    <!-- /#wrapper -->
 
-    <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <div class="form-group col-sm-2">                                       
+        <button class="btn btn-primary btn-block" type="button"><i class="fa fa-search"></i> Buscar</button>
+    </div>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+</form>
+<br>                                    
+<!--tabelas-->
+<div class="table-responsive col-xs-12 col-sm-12 col-md-12">
+  <label>Selecione o usuário para editar:</label>
+  <table class="table table-bordered table-striped">
+    <thead>
+      <tr>
+          <th>
+              <small>Nome</small>
+          </th>
+          <th>
+              <small>Leito</small>
+          </th>                                              
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+        <th class="text-muted"></th>
+        <td class="text-muted"></td>
+    </tr>
+    <tr>
+        <th class="text-muted"></th>
+        <td class="text-muted"></td>
+    </tr>
+    <tr>
+        <th class="text-muted"></th>
+        <td class="text-muted"></td>
+    </tr>
 
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+</tbody>
+</table>
+</div> 
 
-    <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+<form role="form">                                                                    
+
+  <div class="form-group col-sm-3">
+    <label>CPF</label>
+    <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required>
+</div>
+
+<div class="form-group col-sm-9">
+    <label>Nome do Paciente</label>
+    <input name="nome" type="text" class="form-control" placeholder="Nome" pattern="[a-zA-Z\s]+$" required>
+</div>
+
+<div class="form-group col-sm-11">
+    <!-- Alinhar campos -->
+</div>
+
+<div class="form-group col-sm-3">
+    <label>Sexo</label>
+    <select name="sexo" class="form-control mr-sm-2" required>
+      <option>Selecione</option>
+      <option>Masculino</option>
+      <option>Feminino</option>
+  </select>
+</div>
+
+<div class="form-group col-sm-3">
+    <label>Data de Nascimento</label>
+    <input name="dataNasc" type="date" class="form-control" required>
+</div>
+
+<div class="form-group col-sm-3">
+    <label>Tipo de atendimento</label>
+    <select name="atendimento" class="form-control mr-sm-2" required>
+      <option>Selecione</option>
+      <option>Ambulatorial</option>
+      <option>Urgência</option>
+  </select>
+</div>
+
+<div class="form-group col-sm-3">
+    <label>Leito</label>
+    <input name="leito" type="text" class="form-control" placeholder="Leito" required>
+</div>
+
+<div class="form-group col-sm-3">
+    <label>Data de entrada</label>
+    <input name="dataEntrada" type="date" class="form-control" required>
+</div>
+
+<div class="form-group col-sm-11">
+    <!-- Alinhar campos -->
+</div>
+
+<div class="form-group col-sm-3">
+    <label>Alérgico a medicamentos?</label>
+    <select name="alergico" class="form-control mr-sm-2" required>
+      <option>Selecione</option>
+      <option>Sim</option>
+      <option>Não</option>
+  </select>
+</div>
+
+<div class="form-group col-sm-12">
+    <label>Qual medicamento?</label><br>
+    <textarea name="descAlergia" type="text" class="form-control"></textarea><br>
+</div>
+
+<div class="form-group col-sm-3">
+    <label>Faz uso de medicamentos controlados ou uso contínuo?</label>
+    <select name="alergico" class="form-control mr-sm-2" required>
+      <option>Selecione</option>
+      <option>Sim</option>
+      <option>Não</option>
+  </select>
+</div>
+
+<div class="form-group col-sm-12">
+    <label>Meicamento utilizado?</label><br>
+    <textarea name="descMedicamento" type="text" class="form-control"></textarea><br>
+</div>
+
+<div class="form-group col-sm-12">
+    <label>Diagnóstico</label><br>
+    <textarea name="diagnostico" type="text" class="form-control"></textarea><br>
+</div> 
+
+<div class="form-group col-sm-12">
+    <h3>Procedimentos</h3>
+</div>
+
+<div class="form-group col-sm-12">
+    <label>Exames</label><br>
+    <textarea name="exames" type="text" class="form-control"></textarea><br>
+</div>
+
+<div class="form-group col-sm-12">
+    <label>Tratamento prescrito - Medicamentos e horários</label><br>
+    <textarea name="tratamento" type="text" class="form-control"></textarea><br>
+</div>
+</form>
+
+<br>
+
+<div class="col-md-6 col-sm-6">
+  <!--alinhamento dos Botões-->
+</div>
+
+<div class="col-md-3 col-sm-3 col-xs-6">
+  <button type="button" class="btn btn-danger btn-block">EXCLUIR</button>
+</div>
+
+<div class="col-md-3 col-sm-3 col-xs-6">
+  <button type="button" class="btn btn-success btn-block">SALVAR</button>
+</div>
+</div>
+</div>
+
+</div>
+</div>
+</div>
+</div>
+<!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
+</div>
+<!-- /.container-fluid -->
+</div>
+<!-- /#page-wrapper -->
+
+</div>
+<!-- /#wrapper -->
+
+<!-- jQuery -->
+<script src="../vendor/jquery/jquery.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Metis Menu Plugin JavaScript -->
+<script src="../vendor/metisMenu/metisMenu.min.js"></script>
+
+<!-- Custom Theme JavaScript -->
+<script src="../dist/js/sb-admin-2.js"></script>
 
 </body>
 
