--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -200,7 +200,7 @@
                           </div>
 
                           <div class="col-md-3 col-sm-12 col-xs-12">
-                            <button type="button" class="btn btn-success btn-block">SALVAR</button>
+                            <button type="button" class="btn btn-primary btn-block">SALVAR</button>
                           </div>                                
                         </div>
 
